<resources>
    <string name="app_name">Game Of Velha</string>
    <string name="hello_world">Hello world!</string>

    <string name="jogarBtn">JOGAR</string>
    <string name="configuracoesBtn">CONFIGURAÇÕES</string>

    <string name="copyRight">© Copyright Oficina do Código</string>
    <string name="copyRightData">© 2015 Carlos Henry and Caio Alves</string>
    <string name="copy_right">Oficina do Código</string>

    <string name="title_activity_choose_player">Jogador_1</string>

    <string name="playerSelection1">Selecionar player 1</string>
    <string name="playerSelection2">Selecionar player 2</string>

    <string name="nomeUsuario1">Nome do Jogador 1</string>
    <string name="nomeUsuario2">Nome do Jogador 2</string>

    <string name="btn_save_avatar">SALVAR</string>
    <string name="label_new_avatar">Crie um novo avatar</string>
    <string name="title_activity_choose_player_two">ChoosePlayerTwo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="title_activity_show_opponents">Show Opponents</string>
    <string name="title_activity_info_player_one">InfoPlayerOne</string>
    <string name="title_activity_info_player_two">InfoPlayerTwo</string>
</resources>
