<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="br.com.oficinadocodigo.gameofvelha.ChoosePlayer"
    android:background="@drawable/box"
    android:layout_margin="20dp"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_weight="2"
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerSelection1"
            android:textSize="25sp"
            android:id="@+id/textView"/>

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"/>

        <TextView
            android:text="@string/nomeUsuario1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_apelidio_escolherPlayer"
            />

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Escolha seu usuário"

            />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_players_menu"
            android:prompt="@string/app_name"
            android:background="@drawable/spinner_style"
           />
    </LinearLayout>

   <LinearLayout
       android:padding="10dp"
       android:gravity="bottom"
       android:layout_weight="1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >

       <Button
           android:layout_width="fill_parent"
           android:layout_height="50dp"
           android:background="@drawable/botao_principal"
           android:textColor="@color/lightgray"
           android:text="Não sou cadastrado"
           android:id="@+id/btn_novo_escolherPlayer" />


   </LinearLayout>

</LinearLayout>
